--- a/src/componentes/ItemListContainer/index.css
+++ b/src/componentes/ItemListContainer/index.css
@@ -1,6 +1,4 @@
-.saludo{
-    text-align: center;
-    font-size: 5em;
-    text-shadow: 0 5px 20px rgb(255, 123, 0);
+.count{
+    margin-top: 200px;
 }
 
