--- a/src/componentes/ItemDetail/ItemDetail.css
+++ b/src/componentes/ItemDetail/ItemDetail.css
@@ -1,19 +1,10 @@
-.detalles{
+.det-contenedor{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 60px;
-    font-family: 'Rubik', sans-serif;
+    margin-top: 100px;
+    gap: 50px;
 }
 
-.detalles img{
+#det-img{
     height: 600px;
-}
-
-.count{
-    margin-top: 0;
-}
-
-.precio{
-    font-size: 30px;
+    margin-left: 50px;
 }
