--- a/src/componentes/ItemList/itemList.css
+++ b/src/componentes/ItemList/itemList.css
@@ -1,24 +1,30 @@
+h3{
+    margin-top: 4em;
+    margin-left: 21.3em;
+    color: orange;
+    font-family: 'Rubik', sans-serif;
+}
+
 .productos{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 5em;
     flex-wrap: wrap;
     font-family: 'Rubik', sans-serif;
+    margin-left: 400px;
+    width: 1200px;
+    row-gap: 30px;
 
 }
 
-.card{
-    
+.card:hover{
+    transform: scale(1.1);
     border-radius: 3px;
 }
 
 .productos img{
-    
     width: 150px; 
-    height: 230px;  
-    
-
+    height: 230px; 
 }
 
 .card-text{
