--- a/src/componentes/ItemCount/index.css
+++ b/src/componentes/ItemCount/index.css
@@ -12,7 +12,7 @@
     align-items: center;
     margin-left: 5px;
     margin-right: 5px;
-    background-color: #007bff;
+    background-color: orange;
     width: 20px;
     font-size: 24px;
     cursor: pointer;
@@ -29,7 +29,7 @@
 
   .count{
     display: flex;
-    background-color: rgba(170, 223, 236, 0.89);
+    background-color: rgba(255, 255, 255, 0.89);
     border-radius: 10px;
     flex-direction: row;
     align-items: center;
@@ -42,7 +42,7 @@
     margin-bottom: 10px; 
     padding: 10px 20px;
     font-size: 18px;
-    background-color: #007bff;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
